assets/spaceui.css
body {
	font-family: Arial;
}

header {
	border-bottom: solid 2px #e9e9e9;
	padding-left: 25px;
}

nav {
	padding-left: 25px;
	padding-right: 25px;
	padding-top: 15px;
	padding-bottom: 15px;
}

footer {
	border-top: solid 2px #e9e9e9;
}

.tiddler {
	position: relative;
	padding-left: 25px;
	padding-right: 25px;
	padding-top: 15px;
	padding-bottom: 15px;	
}

.tiddler:nth-child(even) {
    border-top: solid 2px #e9e9e9;    
    border-bottom: solid 2px #e9e9e9;    
}

.tiddler-title {
	display: inline;
}

.tiddler-modified {
	display: inline;
	font-style: italic;
	text-decoration: none;
	color: gray;
	font-size: 12px;	
	padding-left: 5px;
}

.toolbar {
	right: 20px;
	position: absolute;
}

